@@ -1,7 +1,7 @@
 /*
  * This file is part of fabric-loom, licensed under the MIT License (MIT).
  *
- * Copyright (c) 2016-2020 FabricMC
+ * Copyright (c) 2016-2025 FabricMC
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -25,13 +25,13 @@
 package net.fabricmc.loom.build.mixin;
 
 import java.io.File;
+import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.stream.Collectors;
 
-import com.google.common.collect.ImmutableList;
 import org.gradle.api.Project;
 import org.gradle.api.tasks.SourceSet;
+import org.gradle.api.tasks.TaskProvider;
 import org.gradle.api.tasks.scala.ScalaCompile;
 
 import net.fabricmc.loom.LoomGradleExtension;
@@ -42,15 +42,15 @@ public class ScalaApInvoker extends AnnotationProcessorInvoker<ScalaCompile> {
 		super(
 				project,
 				// Scala just uses the java AP configuration afaik. This of course assumes the java AP also gets configured.
-				ImmutableList.of(),
+				List.of(),
 				getInvokerTasks(project),
 				AnnotationProcessorInvoker.SCALA);
 	}
 
-	private static Map<SourceSet, ScalaCompile> getInvokerTasks(Project project) {
+	private static Map<SourceSet, TaskProvider<ScalaCompile>> getInvokerTasks(Project project) {
 		MixinExtension mixin = LoomGradleExtension.get(project).getMixin();
-		return mixin.getInvokerTasksStream(AnnotationProcessorInvoker.SCALA)
-				.collect(Collectors.toMap(Map.Entry::getKey, entry -> Objects.requireNonNull((ScalaCompile) entry.getValue())));
+		return mixin.getInvokerTasksStream(AnnotationProcessorInvoker.SCALA, ScalaCompile.class)
+				.collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
 	}
 
 	@Override
